# bje-snap

./: .gitignore  build_log.txt  build_log_vtk.txt  itk_legacy_fix.h
.claude/: settings.local.json
cdash/sites/antigravity-mac/: build.cmake  vars.sh
cdash/sites/chead/: build.cmake
itksnap/: CMakeLists.txt
itksnap/.claude/: settings.local.json
itksnap/.roam/: fitness.yaml
itksnap/CMake/: standalone.cmake
itksnap/GUI/Qt/: main.cxx
itksnap/GUI/Qt/Components/: QtLocalDeepLearningServerDelegate.cxx
itksnap/GUI/Qt/Windows/: DeepLearningServerEditor.cxx  DeepLearningServerEditor.h  DeepLearningServerPanel.cxx  MainControlPanel.cxx  MainControlPanel.h  MainControlPanel.ui  MainImageWindow.cxx
itksnap/Logic/Framework/: GenericImageData.cxx  ImageIODelegates.cxx  ImageIODelegates.h
itksnap/Logic/ImageWrapper/: GuidedNativeImageIO.h
itksnap/PythonModules/itksnap_dls/: pyproject.toml  requirements-apple-silicon.txt  requirements.txt
itksnap/PythonModules/itksnap_dls/itksnap_dls/: __main__.py  mlx_accel.py  segment.py  server.py  session.py
itksnap/Submodules/c3d/: CMakeLists.txt  ConvertImageND.cxx  ConvertImageND.h  ConvertNDLibrary.cmake
itksnap/Submodules/c3d/adapters/: ConvertAdapter.h  LandmarksToSpheres.cxx  LandmarksToSpheres.h  RFApply.cxx  RFApply.h  RFTrain.cxx  RFTrain.h  ResampleImage.cxx  ResampleImage.h  TrimNeckOnBrainMRI.cxx  TrimNeckOnBrainMRI.h
itksnap/Submodules/c3d/doc/: c3d.md
itksnap/Submodules/c3d/itkextras/: itkMultiScaleHessianBasedMeasureImageFilter.hxx
itksnap/Submodules/digestible/include/digestible/: digestible.h
